--- a/.release-it.json
+++ b/.release-it.json
@@ -8,7 +8,8 @@
     "release": true
   },
   "npm": {
-    "skipChecks": true
+    "skipChecks": true,
+    "publish": false
   },
   "plugins": {
     "@release-it/conventional-changelog": {
