fix(ci): added `corepack enable`

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: "22"
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: 👨🏻‍💻 Install Dependencies
         run: yarn install --inline-builds --immutable
 
