--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,4 +34,4 @@ jobs:
       - name: 🚀 Publish
         run: yarn npm publish --access public
         env:
-          NPM_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
+          YARN_NPM_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
