refactor(ci): removed `--tolerate-republish`

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,6 @@ jobs:
         run: yarn run build
 
       - name: 🚀 Publish
-        run: yarn npm publish --access public --tolerate-republish
+        run: yarn npm publish --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
