--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "nodenext",
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true
   },
   "include": [
     "./src/**/*.ts"
