--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,12 +29,12 @@ jobs:
         run: corepack enable
 
       - name: 👨🏻‍💻 Install Dependencies
-        run: yarn install --inline-builds --immutable
+        run: pnpm install --frozen-lockfile
 
       - name: 🏗️ Build
-        run: yarn run build
+        run: pnpm build
 
       - name: 🚀 Publish
-        run: yarn npm publish --access public
+        run: pnpm publish --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
