--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "files": [
     "dist"
   ],
-  "packageManager": "^pnpm@9.14.4",
+  "packageManager": "pnpm@9.14.4",
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
