--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,4 +37,4 @@ jobs:
       - name: 🚀 Publish
         run: pnpm publish --access public
         env:
-          YARN_NPM_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ env.NPM_AUTH_TOKEN }}
